update login, register, reset password
